--- a/slugnutrition/SlugNutrition/Base.lproj/Main.storyboard
+++ b/slugnutrition/SlugNutrition/Base.lproj/Main.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mq6-5F-62A">
-                                <rect key="frame" x="190" y="658" width="111" height="64"/>
+                                <rect key="frame" x="119" y="319" width="111" height="64"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Product Search"/>
                                 <connections>
@@ -80,7 +80,7 @@
                             <outlet property="delegate" destination="Syb-9Y-F6I" id="via-sb-Dam"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Holidays" id="NPs-Pc-Bj8" userLabel="Products"/>
+                    <navigationItem key="navigationItem" title="Products" id="NPs-Pc-Bj8" userLabel="Products"/>
                     <connections>
                         <outlet property="searchBar" destination="aLR-3a-HHl" id="gsr-Wq-yBV"/>
                     </connections>
