--- a/SlugNutrition/SlugNutrition/Base.lproj/Main.storyboard
+++ b/SlugNutrition/SlugNutrition/Base.lproj/Main.storyboard
@@ -13,7 +13,7 @@
             <objects>
                 <tableViewController id="Syb-9Y-F6I" userLabel="Products" customClass="ProductsTableViewController" customModule="SlugNutrition" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="cxH-bY-wGG">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <searchBar key="tableHeaderView" contentMode="redraw" placeholder="Enter Country Code e.g. US" id="aLR-3a-HHl">
@@ -447,13 +447,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TODAY" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GJA-FD-Tc6">
-                                <rect key="frame" x="20" y="215.5" width="374" height="45.5"/>
+                                <rect key="frame" x="20" y="264.5" width="374" height="45.5"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="38"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="WR7-Rh-l92">
-                                <rect key="frame" x="20" y="269" width="374" height="1022"/>
+                                <rect key="frame" x="20" y="318" width="374" height="1022"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="9" translatesAutoresizingMaskIntoConstraints="NO" id="gnO-DL-Q2B">
                                         <rect key="frame" x="0.0" y="0.0" width="374" height="511"/>
@@ -784,8 +784,7 @@
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits" textContentType="name"/>
                                                 <connections>
-                                                    <action selector="NameTextFieldChanged:" destination="rtJ-RZ-bKk" eventType="editingChanged" id="4gC-RL-ihk"/>
-                                                    <action selector="textEditingChangedWith_sender:" destination="rtJ-RZ-bKk" eventType="editingChanged" id="7uM-by-Tme"/>
+                                                    <action selector="textEditingChangedWith_sender:" destination="A7n-EE-ziS" eventType="editingChanged" id="mwu-yP-82D"/>
                                                 </connections>
                                             </textField>
                                         </subviews>
@@ -806,8 +805,7 @@
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits" textContentType="name"/>
                                                 <connections>
-                                                    <action selector="NameTextFieldChanged:" destination="rtJ-RZ-bKk" eventType="editingChanged" id="V1u-ah-vFa"/>
-                                                    <action selector="textEditingChangedWith_sender:" destination="rtJ-RZ-bKk" eventType="editingChanged" id="ZoG-lK-da6"/>
+                                                    <action selector="textEditingChangedWith_sender:" destination="A7n-EE-ziS" eventType="editingChanged" id="W2F-67-u0X"/>
                                                 </connections>
                                             </textField>
                                         </subviews>
@@ -829,9 +827,6 @@
                                                     <segment title="LUNCH"/>
                                                     <segment title="DINNER"/>
                                                 </segments>
-                                                <connections>
-                                                    <action selector="genderSegmentedControlChanged:" destination="rtJ-RZ-bKk" eventType="valueChanged" id="D1u-tb-UqD"/>
-                                                </connections>
                                             </segmentedControl>
                                         </subviews>
                                         <color key="backgroundColor" red="0.83117055890000002" green="0.49050813910000002" blue="0.91055387259999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -975,7 +970,8 @@
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                         <connections>
-                                            <action selector="saveButton:" destination="rtJ-RZ-bKk" eventType="touchUpInside" id="KDq-HL-6Wu"/>
+                                            <action selector="saveButton:" destination="A7n-EE-ziS" eventType="touchUpInside" id="mjM-t2-VrR"/>
+                                            <segue destination="Y6x-uY-yDY" kind="presentation" modalPresentationStyle="fullScreen" id="Riq-5S-WwY"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -1002,6 +998,7 @@
                         <outlet property="nameTextField" destination="sm7-P3-3Zf" id="8hu-hi-sOQ"/>
                         <outlet property="proteinSlider" destination="RA8-Wg-Vzp" id="UFa-1g-sHK"/>
                         <outlet property="proteinTextField" destination="ADf-lL-aym" id="8SB-5v-8pK"/>
+                        <outlet property="saveButton" destination="Dzc-6q-7N8" id="BuP-zg-gpS"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Nei-Er-K7l" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -1012,11 +1009,11 @@
         <scene sceneID="yjm-od-KbD">
             <objects>
                 <viewController id="3oR-ss-cXj" customClass="FoodSearchViewController" customModule="SlugNutrition" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="HYm-71-R4N">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                    <view key="view" contentMode="scaleToFill" ambiguous="YES" id="HYm-71-R4N">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Vr9-X1-OcD">
+                            <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Vr9-X1-OcD">
                                 <rect key="frame" x="20" y="85" width="374" height="720"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="4v1-fm-nFk">
@@ -1656,8 +1653,9 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="mcI-zp-zKJ"/>
-        <segue reference="XoN-o4-Pe5"/>
+        <segue reference="byS-TE-isv"/>
+        <segue reference="doL-E1-MLx"/>
+        <segue reference="Riq-5S-WwY"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="1" width="1810" height="1798"/>
